# CLib

./: CMakeLists.txt  README.md  library  library.cpp  library.h
DataStructs/: BinaryTree.h
LinearAlgebra/: Matrix.cpp  Matrix.h  Vector.cpp  Vector.h
NN/FNN/: HiddenLayer.cpp  HiddenLayer.h
